--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,18 @@
             crossorigin="anonymous"
         ></script>
 
-        <!-- jQuery -->
-        
         <title>Abir Santra - Web Developer | Graphic Designer</title>
     </head>
     <body>
         <div id="react-root"></div>
-        
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+        <!-- jQuery -->
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+            integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
         <script src="../src/isotope.pkgd.min.js"></script>
         <script src="../src/components/portfolio/Portfolio.js"></script>
     </body>
